some text notification

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-watch= file/to/watch
-sdk= file/to/update
+watch= ../sauveur/sdk
+sdk=../sdk/src
 
-watchFsName = name_of_file_to_update
+watchFsName = sdk
