--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-watch= ../sauveur/sdk
-sdk=../sdk/src
+watch= file/to/watch
+sdk= file/to/update
 
-watchFsName = sdk
+watchFsName = name_of_file_to_update
